# motak-bot

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: message.rs  utils.rs
