[package]
name = "motak-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
serenity = "0.12"
dotenv = "0.15.0"
rand = "0.8.5"
